--- a/CommonFriends/.classpath
+++ b/CommonFriends/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="/Users/saurav/Downloads/hadoop-mapreduce-client-core-2.6.0.jar"/>
-	<classpathentry kind="lib" path="/Users/saurav/Downloads/hadoop-common-2.6.0.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-common-2.6.0.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-mapreduce-client-core-2.6.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
